--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -1,4 +1,4 @@
-% In this file you should put the actual content of the blueprint.
+ti% In this file you should put the actual content of the blueprint.
 % It will be used both by the web and the print version.
 % It should *not* include the \begin{document}
 %
@@ -7,6 +7,5 @@
 % can start with a \section or \chapter for instance.
 
 
-\begin{theorem}
-3 = 3
-\end{theorem}
+\section{Main}
+4=4
