--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -1,4 +1,4 @@
-ti% In this file you should put the actual content of the blueprint.
+% In this file you should put the actual content of the blueprint.
 % It will be used both by the web and the print version.
 % It should *not* include the \begin{document}
 %
@@ -6,6 +6,5 @@ ti% In this file you should put the actual content of the blueprint.
 % the current file can be a simple sequence of \input. Otherwise It
 % can start with a \section or \chapter for instance.
 
-
 \section{Main}
-4=4
+3 = 3
