--- a/blueprint/src/macros/common.tex
+++ b/blueprint/src/macros/common.tex
@@ -1,3 +1,67 @@
 % In this file you should put all LaTeX macros to be used
 % both by the pdf version and the web version.
 % This should be most of your macros.
+\newcommand{\tb}{\textbf}
+\newcommand{\vspf}{\vspace{1mm}}
+\newcommand{\vs}{\vspace{3mm}}
+\newcommand{\vsss}{\vspace{6mm}}
+\newcommand{\hs}{\hspace{.5mm}}
+\newcommand{\newprob}{\vspace{8mm}}
+\newcommand{\un}{\underline}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\Z}{\mathbb{Z}}
+\newcommand{\Q}{\mathbb{Q}}
+\newcommand{\N}{\mathbb{N}}
+\newcommand{\C}{\mathbb{C}}
+\newcommand{\E}{\mathbb{E}}
+\newcommand{\F}{\mathcal{F}}
+\newcommand{\Prob}{\mathbb{P}}
+\newcommand{\G}{\Gamma}
+\newcommand{\A}{\mc{A}}
+\newcommand{\X}{\mc{X}}
+\newcommand{\pf}{\textit{Proof}: }
+\newcommand{\dis}{\displaystyle}
+\newcommand{\ep}{\epsilon}
+\newcommand{\lam}{\lambda}
+\newcommand{\sub}{\subseteq}
+\newcommand{\cons}{\supseteq}
+\newcommand{\subtext}{\underset}
+\newcommand{\al}{\alpha}
+\newcommand{\st}{\hspace{1.5mm} \text{s.t.} \hspace{1mm}}
+\newcommand{\ifff}{\hspace{1.5mm} \text{iff} \hspace{1mm}}
+\newcommand{\w}{\hspace{1mm}\text{w/}\hspace{1mm}}
+\newcommand{\Hom}{\text{Hom}}
+\newcommand{\im}{\text{im} \hspace{.8mm}}
+\newcommand{\comment}{\textit{Comment}: }
+\newcommand{\lan}{\langle}
+\newcommand{\ran}{\rangle}
+\newcommand{\diam}{\text{diam}}
+\newcommand{\del}{\nabla}
+\newcommand{\norm}{\trianglelefteq}
+\newcommand{\red}{\textcolor{red}}
+\newcommand{\purple}{\textcolor{purple}}
+\newcommand{\ideal}{\triangleleft}
+\newcommand{\mc}[1]{\mathcal{#1}}
+\newcommand{\mf}[1]{\mathfrak{#1}}
+\newcommand{\ol}{\overline}
+\newcommand{\ul}{\underline}
+\newcommand{\wt}{\widetilde}
+\newcommand{\wh}{\widehat}
+\DeclareMathOperator{\stab}{stab}
+\DeclareMathOperator{\orb}{orb}
+\DeclareMathOperator{\Int}{Int}
+\DeclareMathOperator{\Bd}{Bd}
+\DeclareMathOperator{\rb}{rb}
+\DeclareMathOperator{\cl}{cl}
+\DeclareMathOperator{\consge1}{\supseteq_{\ge 1}}
+\DeclareMathOperator{\supp}{supp}
+\DeclareMathOperator{\inc}{inc}
+\DeclareMathOperator{\dec}{dec}
+\DeclareMathOperator{\Var}{Var}
+\DeclareMathOperator{\tvd}{t.v.d.}
+\DeclareMathOperator{\Probb}{Prob}
+\DeclareMathOperator{\Id}{Id}
+\DeclareMathOperator{\Unif}{Unif}
+\DeclareMathOperator{\MIS}{MIS}
+\DeclareMathOperator{\PP}{\mathbb{P}}
+\DeclareMathOperator{\Ber}{Ber}
