--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -7,4 +7,47 @@
 % can start with a \section or \chapter for instance.
 
 \section{Main}
-3 = 3
+
+\begin{lemma}
+\label{small_lemma}
+\lean{small_lemma_about_sets}
+\leanok
+
+Let $Y$ be a set and $x \in Y$ some point in $Y$. Let $C \sub Y$ be a non-empty set satisfying $C \ne {x}$. Then there is some $y \in Y$ such that $y \ne x$ and $y \in C$.
+\end{lemma}
+
+\begin{proof}
+\leanok 
+
+We split into cases depending on whether $x \in C$.
+
+\vs
+
+Case 1: $x \not \in C$. Since $C$ is non-empty, there is some $y \in C$. 
+We claim such a $y$ satisfies $y \ne x$ and $y \in C$. The latter is by definition.
+For the former, if $y = x$, then that $y \in C$ implies $x \in C$, contradicting $x \not \in C$.
+
+\vs
+
+Case 2: $x \in C$. We show that, assuming the conclusion is false, it holds that $C = \{x\}$. 
+To show $\{x\} \subseteq C$, it suffices to show $x \in C$, but we know this already. To show
+$C \subseteq \{x\}$, we take a $y \in C$, and by assumption, since $y \in C$, we know $y = x$
+and hence $y \in \{x\}$.
+\end{proof}
+
+
+
+% \begin{theorem}[Smale 1958]
+%     \label{thm:sphere_eversion}
+%     \lean{sphere_eversion}
+%     \leanok
+%     \uses{def:immersion}
+%     There is a homotopy of immersions of $𝕊^2$ into $ℝ^3$ from the inclusion map to
+%     the antipodal map $a : q ↦ -q$.
+%   \end{theorem}
+    
+%   \begin{proof}
+%     \leanok
+%     \uses{thm:open_ample, lem:open_ample_immersion}
+%     This obviously follows from what we did so far.
+%   \end
