--- a/blueprint/src/web.tex
+++ b/blueprint/src/web.tex
@@ -6,7 +6,7 @@
 
 \documentclass{report}
 
-\usepackage{amssymb, amsthm, amsmath}
+\usepackage{amssymb, amsthm, amsmath,amsfonts}
 \usepackage{hyperref}
 \usepackage[showmore, dep_graph]{blueprint}
 
